authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.minhnguyenle.net`)
      services:
        - name: authelia
          port: 9091
  tls:
    secretName: wildcard-minhnguyenle-net-tls
